# share_wgpu_between_bevy_and_burn

./: Cargo.toml  readme.md
src/: main.rs
