[package]
name = "share_wgpu_between_bevy_and_burn"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/share_wgpu_between_bevy_and_burn"
edition = "2024"

[dependencies]

bevy = "0.17.0-dev"
burn = { version = "0.19.0", features = ["wgpu"] }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
burn = { git = "https://github.com/janhohenheim/burn", branch = "wgpu-26" }
